[package]
name = "bluebubbles-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.0"
rocket = "0.5.0"
rusqlite = { version = "0.31.0", features = ["bundled", "i128_blob"] }
serde = "1.0.197"
serde_json = "1.0.114"
hyper = { version = "1.2.0", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.3", features = ["full"] }
url = "2.5.0"
socketioxide = "0.11.0"
axum = "0.7.4"
